--- a/Problem Sets/Computation/Lab 5 Object Oriented Programming (Ani).ipynb
+++ b/Problem Sets/Computation/Lab 5 Object Oriented Programming (Ani).ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
       "Color:  black\n",
       "Max backpack size:  10\n",
       "\n",
-      "Owner:\t\tBarry\n",
+      "Owner:\t\tBerry\n",
       "Color:\t\tblack\n",
       "Size:\t\t4\n",
       "Max Size:\t10\n",
@@ -116,8 +116,8 @@
    "source": [
     "def test_backpack():\n",
     "  \n",
-    "    testpack = Backpack(\"Barry\", \"black\", 10) \n",
-    "    if testpack.name != \"Barry\":          \n",
+    "    testpack = Backpack(\"Berry\", \"black\", 10) \n",
+    "    if testpack.name != \"Berry\":          \n",
     "        print(\"Backpack.name assigned incorrectly\")\n",
     "    if testpack.color != \"black\":\n",
     "        print(\"Backpack.color assigned incorrectly\")\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0,
@@ -220,11 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -297,20 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6+9j)\n",
-      "(-9+17j)\n",
-      "(3.8-0.6j)\n"
+      "(16+13j)\n",
+      "(28+104j)\n",
+      "(0.6896551724137931-0.27586206896551724j)\n"
      ]
     }
    ],
@@ -329,13 +325,20 @@
     "    if str(py_cnum) != str(my_cnum):\n",
     "        print(\"__str__() failed for\", py_cnum)\n",
     "        \n",
-    "    test = ComplexNumber(5, 7)\n",
+    "    test = ComplexNumber(8, 4)\n",
     "    print(test + my_cnum)\n",
     "    print(test * my_cnum)\n",
     "    print(test / my_cnum)\n",
     "        \n",
-    "test_ComplexNumber(1, 2)"
+    "test_ComplexNumber(8, 9)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
